# parliamentarch

./: LICENSE  LISEZMOI.rst  README.rst  __init__.py  pyproject.toml  util.py
.github/workflows/: python-package.yml
src/parliamentarch/: __init__.py  __main__.py  _util.py  french.py  geometry.py  svg.py  svg_base.py  util.py
src/parliamentarch/french/: __main__.py  export.py  json.py  organize.py  pseudo_xml.py  scrape.py
